vlib/v/checker/tests/match_string_and_byte_error.vv
ch := `a`
match ch {
  'a' {}
  else {}
}
